Fixed NPE when using default headers